# quadruped_locomotion

./: README.md
balance_controller/: CMakeLists.txt  controller_plugin_descriptions.xml  package.xml  plugin_descriptions.xml
balance_controller/cfg/: controller_gains.cfg
balance_controller/config/: contorller_gains.yaml  control.yaml  controller_gains.yaml  controller_gains_gazebo.yaml  free_gait_control.perspective
balance_controller/include/balance_controller/: math.hpp
balance_controller/include/balance_controller/contact_force_distribution/: ContactForceDistribution.hpp  ContactForceDistributionBase.hpp  ContactForceDistributionBase.hpp.autosave
balance_controller/include/balance_controller/motion_control/: MotionControllerBase.hpp  VirtualModelController.hpp
balance_controller/include/balance_controller/ros_controler/: configure_change_controller.hpp  forward_command_interface.hpp  gazebo_state_hardware_interface.hpp  joint_torque_controller.hpp  robot_state_gazebo_ros_control_plugin.hpp  robot_state_interface.hpp  ros_balance_controller.hpp  single_leg_controller.hpp  state_estimate_controller.hpp  walk_forward_controller.hpp
balance_controller/include/state_switcher/: StateSwitcher.hpp  StateSwitcherBase.hpp
balance_controller/launch/: balance_controller_manager.launch  balance_controller_manager_setcap.launch  rqt_interface.launch  setcap.sh
balance_controller/src/contact_force_distribution/: ContactForceDistribution.cpp  ContactForceDistributionBase.cpp
balance_controller/src/motion_control/: MotionControllerBase.cpp  VirtualModelController.cpp
balance_controller/src/ros_controller/: balance_controller_manager.cpp  configure_change_controller.cpp  gazebo_state_hardware_interface.cpp  joint_torque_controller.cpp  robot_state_gazebo_ros_control_plugin.cpp  ros_balance_controller.cpp  single_leg_controller.cpp  state_estimate_controller.cpp  walk_forward_controller.cpp
balance_controller/src/state_switcher/: StateSwitcher.cpp  StateSwitcherBase.cpp
balance_controller/test/: model_test.cpp  test.cpp  test_balance_controller.cpp  virtual_model_controller_test.cpp
control_panel/: CMakeLists.txt  package.xml  plugin.xml
doxygen/: Doxyfile
free_gait_action_loader/actions/: test.yaml
free_gait_core/: CMakeLists.txt  package.xml  plugin_description.xml
free_gait_core/src/: TypeDefs.cpp
free_gait_core/test/: AdapterDummy.cpp  AdapterDummy.hpp  FootstepTest.cpp  PoseOptimizationQpTest.cpp  PoseOptimizationSQPTest.cpp  test_kp.cpp
free_gait_marker/: CMakeLists.txt
free_gait_marker/config/: locomotion_controller.yaml
free_gait_marker/launch/: free_gait_marker.launch
free_gait_marker/src/: free_gait_marker_node.cpp
free_gait_msgs/: CMakeLists.txt  package.xml
free_gait_msgs/msg/: LegMode.msg  RobotState.msg
free_gait_msgs/srv/: SetLimbConfigure.srv  SetStepParameter.srv
free_gait_python/: setup.py
free_gait_ros/: CMakeLists.txt  package.xml  plugin_description.xml
free_gait_ros/launch/: test.launch  test0.launch
free_gait_ros/src/: AdapterDummy.cpp  AdapterGazebo.cpp  AdapterRos.cpp  AdapterRosInterfaceBase.cpp  AdapterRosInterfaceDummy.cpp  AdapterRosInterfaceGazebo.cpp  FreeGaitActionClient.cpp  FreeGaitActionServer.cpp  RosVisualization.cpp  StateRosPublisher.cpp  StepRosConverter.cpp
free_gait_ros/test/: AdapterDummy.cpp  FootstepOptimization.cpp  StepTest.cpp  action_client_test.cpp  action_client_test_node_kp.cpp  action_server_test.cpp  action_server_test_node_kp.cpp  gait_generate_client.cpp  robotStatePublisher.cpp  test.cpp  test_foothold_optimization.cpp  test_kp.cpp
free_gait_rviz_plugin/: CMakeLists.txt
free_gait_rviz_plugin/src/: FreeGaitPreviewDisplay.cpp  FreeGaitPreviewPlayback.cpp
free_gait_rviz_plugin/test/: class_load_test.cpp
my_actions/: CMakeLists.txt  package.xml
my_actions/actions/: test.yaml
my_actions/collections/: test_collections.yaml
my_actions/motion_scripts/: base_rotate_pitch.yaml  base_rotate_roll.yaml  base_rotate_yaw.yaml  base_rotate_yaw_pitch.yaml  base_target_demo.yaml  change_to_spot.yaml  climb_stairs.yaml  end_effector_trajectory_demo.yaml  end_effectors_target_demo.yaml  joint_mode_switch.yaml  joints_move.yaml  jump.yaml  kick_ball.yaml  leg_move.yaml  leg_wave.yaml  leg_wave_2.yaml  pace_gazebo.yaml  push_elevator.yaml  push_elevator2.yaml  reset_legmode.yaml  shake_leg.yaml  sitdown.yaml  stand_middle.yaml  standup.yaml  stational_walk.yaml  step_demo.yaml  step_down.yaml  trot_test.yaml
qp_solver/: CMakeLists.txt  package.xml
qp_solver/src/: Array.cc  QuadProg++.cc  State.cpp  main.cc  qp_solve_test.cpp  quadraticproblemsolver.cpp  sequencequadraticproblemsolver.cpp
qp_solver/test/: AdapterDummy.cpp  PoseOptimizationQpTest.cpp  PoseOptimizationSQPTest.cpp
quadruped_model/: CMakeLists.txt  package.xml
quadruped_model/src/: QuadrupedModel.cpp  kinematicsTest.cpp  quadruped_state.cpp  quadrupedkinematics.cpp
quadruped_model/urdf/: quadruped_model.urdf  quadruped_model_lf_leg.urdf  quadruped_model_lh_leg.urdf  quadruped_model_rf_leg.urdf  quadruped_model_rh_leg.urdf  simple_humanoid.urdf  simpledog.urdf  simpledog_lf_leg.urdf  simpledog_lh_leg.urdf  simpledog_m.urdf  simpledog_rf_leg.urdf  simpledog_rh_leg.urdf
quadruped_odom/: CMakeLists.txt  package.xml
quadruped_odom/include/: legodom.h
quadruped_odom/launch/: legodom_estimation.launch  legodom_rviz.launch
quadruped_odom/rviz/: odom.rviz
quadruped_odom/src/: legodom.cpp  legodom_node.cpp  legodom_test.cpp
rqt_free_gait_action/: CMakeLists.txt
rqt_free_gait_action/launch/: rqt_free_gait_action.launch
rqt_free_gait_action/resource/: FreeGaitActionPlugin.ui
single_leg_test/: CMakeLists.txt  package.xml
single_leg_test/DataFloder/: PlannedData.txt  PositionofForward.txt  TauofInversedynamics.txt  VelocityofForward.txt  webotsaccelerationreal_real.txt  webotsacclerationreal.txt  webotsposition.txt  webotsposition_real.txt  webotstorque.txt  webotstorquereal.txt  webotstorquereal_real.txt  webotsvelocity.txt  webotsvelocity_real.txt
single_leg_test/lib/: model_test_header.cpp
(+118 files in other folders)
