<?xml version="1.0"?>
<package format="2">
  <name>balance_controller</name>
  <version>0.0.0</version>
  <description>The balance_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wshy1995@outlook.com">Wang Shunyao</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/balance_controller</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qp_solver</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_export_depend>qp_solver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend> -->
  <build_depend>free_gait_core</build_depend>
  <build_depend>quadruped_model</build_depend>
  <build_depend>free_gait_ros</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>free_gait_ros</exec_depend>
  <exec_depend>quadruped_model</exec_depend>
  <exec_depend>free_gait_core</exec_depend>
  <exec_depend>qp_solver</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros_control</depend>
  <depend>forward_command_controller</depend>
  <depend>realtime_tools</depend>
  <depend>sim_assiants</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <balance_controller plugin="${prefix}/plugin_descriptions.xml"/>
    <controller_interface plugin="${prefix}/controller_plugin_descriptions.xml"/>
  </export>
</package>
