<?xml version="1.0"?>
<package format="2">
  <name>quadruped_odom</name>
  <version>0.0.0</version>
  <description>The quadruped_odom package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hitnuc@todo.todo">hitnuc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>quadruped_model</build_depend>
  <build_depend>free_gait_msgs</build_depend>
  <build_depend>sim_assiants</build_depend>
  <build_depend>free_gait_core</build_depend>
  <build_depend>qp_solver</build_depend>

  <exec_depend>free_gait_core</exec_depend>
  <exec_depend>sim_assiants</exec_depend>
  <exec_depend>free_gait_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>quadruped_model</exec_depend>
  <exec_depend>qp_solver</exec_depend>

  <depend>sophus</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
